--- a/main_style.css
+++ b/main_style.css
@@ -1,19 +1,62 @@
 
-body{
+body {
     background-color: grey;
 }
 
-.main-header{
+.main-header {
     color: white;
+    float: left;
+    margin-right: 15px;
 }
 
-.main-header-div{
-  background-color: black;
-  width: 100%;
-  overflow: auto;
-  top: 0;
-  left: 0;
-  right: 0;
-  position: fixed;
-  padding: 20px;
+.banner-div {
+    background-color: black;
+    width: 100%;
+    height: 70px;
+    overflow: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    position: fixed;
+    padding: 20px;
+  }
+
+.main-nav-bar-div {
+    padding: 0;
+    margin-top: 28px;
+    margin-left: 0;
+    margin-right: 0;
+    top: 0;
+    right: 0;
+    float: left;
+}
+
+.nav-bar-menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: black;
+}
+
+.nav-li {
+    display: inline;
+    padding: 8px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    height: 100%
+}
+
+li a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+    background-color: #4CAF50;
+    padding: 0;
 }
