--- a/main_style.css
+++ b/main_style.css
@@ -12,13 +12,14 @@ body {
 .banner-div {
     background-color: black;
     width: 100%;
-    height: 70px;
+    height: 50px;
     overflow: auto;
     top: 0;
     left: 0;
     right: 0;
     position: fixed;
-    padding: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
   }
 
 .main-nav-bar-div {
