--- a/main_style.css
+++ b/main_style.css
@@ -23,41 +23,41 @@ body {
   }
 
 .main-nav-bar-div {
-    padding: 0;
-    margin-top: 28px;
+    padding: 20px;
     margin-left: 0;
     margin-right: 0;
     top: 0;
     right: 0;
     float: left;
+	padding: 0;
+	margin-top: 28px;
+
 }
 
 .nav-bar-menu {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
     background-color: black;
 }
 
 .nav-li {
     display: inline;
-    padding: 8px;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 25px;
-    height: 100%
+    height: 100%;
 }
 
 li a {
   color: white;
-  padding: 14px 16px;
   text-decoration: none;
+  position:
 }
 
-li a:hover {
+li:hover {
     background-color: #4CAF50;
-    padding: 0;
 }
+
