--- a/main.css
+++ b/main.css
@@ -73,6 +73,29 @@ li:hover{
 	position: absolute;
 	width: 44%;
 	height: 70%;
+	padding: 0%;
+	border-color: white;
+}
+
+#param-table {
+	width: 100%;
+	margin: 0%;
+}
+
+.table-cell {
+	padding: 0%;
+}
+
+.cell-input-div {
+	width: 100%;
+	height: 100%;
+	margin: 0%;
+}
+
+.table-cell-input {
+	width: 100%;
+	height: 100%;
+	margin: 0%;
 }
 
 #editor-segment {
